# integral

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp
